* What is new in gsl-1.2:

** Added missing declaration for the generator gsl_rng_mt_19937_1998.

** Fixed a bug in gsl_linalg_solv_symm_cyc_tridiag which caused it to
produce incorrect results.

** The function gsl_min_fminimizer_minimum has been renamed to
gsl_min_fminimizer_x_minimum for consistency (the old function name is
still available but is deprecated).  Additional functions have been
added for accessing the function values at the minimum and endpoints
of the bounding interval.

** Added new physical constants, newton, dyne, joule, erg and 
power-of-ten prefixes, Mega, Giga, Tera, etc.

** Added new functions for combining permutations, converting between
cyclic and linear representations, and counting cycles and inversions.

* What was new in gsl-1.1.1:

** Fixes to histogram2d stat functions

** Added missing prototypes for complex LU determinant functions

** Improved error handling in multifit routines

** Added check to avoid division by zero for rank-deficient matrix in
multifit iteration

* What was new in gsl-1.1:

** The permutation module now includes a copy function
gsl_permutation_memcpy

** The implementation of gsl_sf_gamma_inc has been improved and now
avoids problems caused by internal singularities which occurred in the
series expansion for some combinations of parameters.

** IEEE comparisons of infinities and NaNs are tested during the
configure stage and the functions gsl_isnan, gsl_isinf and gsl_finite
are only compiled on platforms which support the necessary tests.

** The histogram routines now include a sum function,
gsl_histogram_sum for computing the total bin sum, and additional
statistics functions for 2d histograms.

** Internal error checking of user-defined functions has been improved
in the multiroots functions.

** Constants now include the Bohr Radius and Vacuum Permittivity.

** Range checking is now turned off when building the library, but is
still on by default when compiling user applications.
