@@ -1,6 +1,7 @@
 /* linalg/tridiag.c
  * 
- * Copyright (C) 1996, 1997, 1998, 1999, 2000 Gerard Jungman, Brian Gough
+ * Copyright (C) 1996, 1997, 1998, 1999, 2000, 2002 Gerard Jungman,
+ * Brian Gough, David Necas
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -110,6 +111,76 @@ solve_tridiag(
   return status;
 }
 
+/* plain gauss elimination, only not bothering with the zeroes
+ *
+ *       diag[0]  abovediag[0]             0   .....
+ *  belowdiag[0]       diag[1]  abovediag[1]   .....
+ *             0  belowdiag[1]       diag[2]
+ *             0             0  belowdiag[2]   .....
+ */
+static
+int 
+solve_tridiag_nonsym(
+  const double diag[], size_t d_stride,
+  const double abovediag[], size_t a_stride,
+  const double belowdiag[], size_t b_stride,
+  const double rhs[], size_t r_stride,
+  double x[], size_t x_stride,
+  size_t N)
+{
+  int status;
+  double *alpha = (double *) malloc (N * sizeof (double));
+  double *z = (double *) malloc (N * sizeof (double));
+
+  if (alpha == 0 || z == 0)
+    {
+      status = GSL_ENOMEM;
+    }
+  else
+    {
+      size_t i, j;
+
+      /* Bidiagonalization (eliminating belowdiag)
+         & rhs update
+         diag' = alpha
+         rhs' = z
+       */
+      alpha[0] = diag[0];
+      z[0] = rhs[0];
+
+      for (i = 1; i < N; i++)
+        {
+          const double t = belowdiag[b_stride*(i - 1)]/alpha[i-1];
+          alpha[i] = diag[d_stride*i] - t*abovediag[a_stride*(i - 1)];
+          z[i] = rhs[r_stride*i] - t*z[i-1];
+          /* FIXME!!! */
+          if (alpha[i] == 0) {
+            status = GSL_EZERODIV;
+            goto solve_tridiag_nonsym_END;
+          }
+        }
+
+      /* backsubstitution */
+      x[x_stride * (N - 1)] = z[N - 1]/alpha[N - 1];
+      if (N >= 2)
+        {
+          for (i = N - 2, j = 0; j <= N - 2; j++, i--)
+            {
+              x[x_stride * i] = (z[i] - abovediag[a_stride*i] * x[x_stride * (i + 1)])/alpha[i];
+            }
+        }
+
+      status = GSL_SUCCESS;
+    }
+
+solve_tridiag_nonsym_END:
+  if (z != 0)
+    free (z);
+  if (alpha != 0)
+    free (alpha);
+
+  return status;
+}
 
 /* for description of method see [Engeln-Mullges + Uhlig, p. 96]
  *
@@ -211,6 +282,116 @@ solve_cyc_tridiag(
   return status;
 }
 
+/* solve following system w/o the corner elements and then use
+ * Sherman-Morrison formula to compensate for them
+ *
+ *        diag[0]  abovediag[0]             0   .....  belowdiag[N-1]
+ *   belowdiag[0]       diag[1]  abovediag[1]   .....
+ *              0  belowdiag[1]       diag[2]
+ *              0             0  belowdiag[2]   .....
+ *            ...           ...
+ * abovediag[N-1]           ...
+ */
+static
+int solve_cyc_tridiag_nonsym(
+  const double diag[], size_t d_stride,
+  const double abovediag[], size_t a_stride,
+  const double belowdiag[], size_t b_stride,
+  const double rhs[], size_t r_stride,
+  double x[], size_t x_stride,
+  size_t N)
+{
+  int status;
+  double *alpha = (double *) malloc (N * sizeof (double));
+  double *zb = (double *) malloc (N * sizeof (double));
+  double *zu = (double *) malloc (N * sizeof (double));
+  double *w = (double *) malloc (N * sizeof (double));
+  double beta;
+
+  if (alpha == 0 || zb == 0 || zu == 0 || w == 0)
+    {
+      status = GSL_ENOMEM;
+    }
+  else
+    {
+      size_t i, j;
+
+      /* Bidiagonalization (eliminating belowdiag)
+         & rhs update
+         diag' = alpha
+         rhs' = zb
+         rhs' for Aq=u is zu
+       */
+      zb[0] = rhs[0];
+      if (diag[0] != 0) beta = -diag[0]; else beta = 1;
+      zu[0] = beta;
+      alpha[0] = diag[0] - beta;
+
+      for (i = 1; i+1 < N; i++)
+        {
+          const double t = belowdiag[b_stride*(i - 1)]/alpha[i-1];
+          alpha[i] = diag[d_stride*i] - t*abovediag[a_stride*(i - 1)];
+          zb[i] = rhs[r_stride*i] - t*zb[i-1];
+          zu[i] = -t*zu[i-1];
+          /* FIXME!!! */
+          if (alpha[i] == 0) {
+            status = GSL_EZERODIV;
+            goto solve_cyc_tridiag_nonsym_END;
+          }
+        }
+
+      {
+        const int i = N-1;
+        const double t = belowdiag[b_stride*(i - 1)]/alpha[i-1];
+        alpha[i] = diag[d_stride*i]
+                   - abovediag[a_stride*i]*belowdiag[b_stride*i]/beta
+                   - t*abovediag[a_stride*(i - 1)];
+        zb[i] = rhs[r_stride*i] - t*zb[i-1];
+        zu[i] = abovediag[a_stride*i] - t*zu[i-1];
+        /* FIXME!!! */
+        if (alpha[i] == 0) {
+          status = GSL_EZERODIV;
+          goto solve_cyc_tridiag_nonsym_END;
+        }
+      }
+
+      /* backsubstitution */
+      w[N-1] = zu[N-1]/alpha[N-1];
+      x[N-1] = zb[N-1]/alpha[N-1];
+      for (i = N - 2, j = 0; j <= N - 2; j++, i--)
+        {
+          w[i] = (zu[i] - abovediag[a_stride*i] * w[i+1])/alpha[i];
+          x[i*x_stride] = (zb[i] - abovediag[a_stride*i] * x[x_stride*(i + 1)])/alpha[i];
+        }
+
+      /* Sherman-Morrison */
+      {
+        const double vw = w[0] + belowdiag[b_stride*(N - 1)]/beta * w[N-1];
+        const double vx = x[0] + belowdiag[b_stride*(N - 1)]/beta * x[x_stride*(N - 1)];
+        /* FIXME!!! */
+        if (vw + 1 == 0) {
+          status = GSL_EZERODIV;
+          goto solve_cyc_tridiag_nonsym_END;
+        }
+        for (i = 0; i < N; i++)
+          x[i] -= vx/(1 + vw)*w[i];
+      }
+
+      status = GSL_SUCCESS;
+    }
+
+solve_cyc_tridiag_nonsym_END:
+  if (zb != 0)
+    free (zb);
+  if (zu != 0)
+    free (zu);
+  if (w != 0)
+    free (w);
+  if (alpha != 0)
+    free (alpha);
+
+  return status;
+}
 
 int
 gsl_linalg_solve_symm_tridiag(
@@ -234,6 +415,30 @@ gsl_linalg_solve_symm_tridiag(
   }
 }
 
+int
+gsl_linalg_solve_tridiag(
+  const gsl_vector * diag,
+  const gsl_vector * abovediag,
+  const gsl_vector * belowdiag,
+  const gsl_vector * rhs,
+  gsl_vector * solution)
+{
+  if (diag->size != rhs->size
+      || (abovediag->size != rhs->size && abovediag->size != rhs->size-1)
+      || (belowdiag->size != rhs->size && belowdiag->size != rhs->size-1)
+      || (solution->size != rhs->size)) {
+    return GSL_EBADLEN;
+  }
+  else {
+    return solve_tridiag_nonsym(diag->data, diag->stride,
+                                abovediag->data, abovediag->stride,
+                                belowdiag->data, belowdiag->stride,
+                                rhs->data, rhs->stride,
+                                solution->data, solution->stride,
+                                diag->size);
+  }
+}
+
 
 int
 gsl_linalg_solve_symm_cyc_tridiag(
@@ -254,5 +459,29 @@ gsl_linalg_solve_symm_cyc_tridiag(
 			     rhs->data, rhs->stride,
 	                     solution->data, solution->stride,
 	                     diag->size);
+  }
+}
+
+int
+gsl_linalg_solve_cyc_tridiag(
+  const gsl_vector * diag,
+  const gsl_vector * abovediag,
+  const gsl_vector * belowdiag,
+  const gsl_vector * rhs,
+  gsl_vector * solution)
+{
+  if (diag->size != rhs->size
+      || abovediag->size != rhs->size
+      || belowdiag->size != rhs->size
+      || solution->size != rhs->size) {
+    return GSL_EBADLEN;
+  }
+  else {
+    return solve_cyc_tridiag_nonsym(diag->data, diag->stride,
+                                    abovediag->data, abovediag->stride,
+                                    belowdiag->data, belowdiag->stride,
+                                    rhs->data, rhs->stride,
+                                    solution->data, solution->stride,
+                                    diag->size);
   }
 }
